fix test file